force-app/main/default/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Dhruvsoft__OpportunityId__c</fullName>
        <label>OpportunityId(Deprecated)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity(Deprecated)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__OrderAmtFromOpportunityAmt__c</fullName>
        <description>This Order Amount is fetched from Opportunity Amount Field</description>
        <label>Order Amount (Opportunity)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dhruvsoft__convert_from_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted from Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivatedOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Orders</label>
    </listViews>
    <listViews>
        <fullName>AllDraftOrders</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ORDERS.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Orders</label>
    </listViews>
    <listViews>
        <fullName>AllOrders</fullName>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>